--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,13 @@ pluginManagement {
         }
     }
 }
+def isUncluded = gradle.parent != null
+if(isUncluded){
+    includeBuild("../skerna-slbase"){
+        dependencySubstitution {
+            substitute module('io.skerna.commons:skerna-slbase-metadata') with project(':')
+            substitute module('io.skerna.commons:skerna-slbase-jvm') with project(':')
+            substitute module('io.skerna.commons:skerna-slbase-js') with project(':')
+        }
+    }
+}
