--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
 
 apply plugin: 'maven-publish'
 
+repositories {
+    mavenCentral()
+}
 kotlin {
     jvm {
         compilations.main.kotlinOptions {
@@ -23,7 +26,7 @@ kotlin {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib-common"
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$kotlinCoroutinesVersion"
-                api "io.skerna.commons:skerna-slbase-metadata:$skernaVersion"
+                api "io.skerna.commons:commons-slbase-metadata:$skernaVersion"
             }
         }
         commonTest {
@@ -36,7 +39,7 @@ kotlin {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib"
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
-                api "io.skerna.commons:skerna-slbase-jvm:$skernaVersion"
+                api "io.skerna.commons:commons-slbase-jvm:$skernaVersion"
             }
         }
         jvmTest {
@@ -51,7 +54,7 @@ kotlin {
             dependencies {
                 implementation "org.jetbrains.kotlin:kotlin-stdlib-js"
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$kotlinCoroutinesVersion"
-                api "io.skerna.commons:skerna-slbase-js:$skernaVersion"
+                api "io.skerna.commons:commons-slbase-js:$skernaVersion"
             }
         }
         jsTest {
