--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 group = io.skerna.libs
 version = 0.1.0
-skernaVersion = 0.1.0
+gradleVersion=6.2
+kotlin_version=1.3.50
+jfrog_version=1.8.4
+kotlin_coroutines_version = 1.0.1
 
-kotlinVersion=1.3.30
-kotlinCoroutinesVersion = 1.0.1
+
+skerna_slbase_version = 0.1.0
